Enhance navbar with AS SULUK logo and description
Updated navbar to include a new logo section for 'AS SULUK' with additional text elements.

--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
     <nav class="bg-green-800 text-white shadow-lg sticky top-0 z-50">
         <div class="max-w-6xl mx-auto px-4">
             <div class="flex justify-between items-center h-16">
-                <div class="flex items-center space-x-2">
-                    <span class="text-2xl font-bold">📚</span>
-                    <span class="font-semibold text-lg">Suluk Nahwu Shorof</span>
-                </div>
+                <div class="flex items-center space-x-3">
+    <!-- LOGO AS SULUK -->
+    <div class="flex flex-col items-start bg-green-700 px-4 py-2 rounded-lg border-l-4 border-yellow-400">
+        <span class="text-2xl font-bold text-white tracking-wider">AS SULUK</span>
+        <div class="flex items-center justify-between w-full">
+            <span class="text-xs text-yellow-300 uppercase tracking-wider font-arabic">مطالب</span>
+            <span class="text-xs text-white ml-2">Metode Cepat Membaca Kitab Kuning</span>
+        </div>
+    </div>
+</div>
                 
                 <!-- Menu Desktop -->
                 <div class="hidden md:flex space-x-8">
