--- a/index.html
+++ b/index.html
@@ -359,9 +359,9 @@
                 <div>
                     <h5 class="font-semibold mb-4">Kontak</h5>
                     <ul class="space-y-2 text-sm text-gray-400">
-                        <li>📧 info@suluknahwushorof.my.id</li>
+                        <li>📧 ppmatholibasuluk02@gmail.com</li>
                         <li>📱 +62 812-3456-7890</li>
-                        <li>📍 Indonesia</li>
+                        <li>📍 Kaliwadas Sumber Cirebon Jawa Barat Indonesia</li>
                     </ul>
                 </div>
             </div>
