Enhance contact section with links and details
Updated contact information with clickable email and WhatsApp links, and improved address description.

--- a/index.html
+++ b/index.html
@@ -359,11 +359,27 @@
                         <li><a href="#" class="hover:text-white transition">PDF Kitab</a></li>
                     </ul>
                 </div>
-                <div>
+               <div>
     <h5 class="font-semibold mb-4">Kontak</h5>
     <ul class="space-y-2 text-sm text-gray-400">
-        <li>📧 ppmatholibasuluk02@gmail.com</li>
-        <li>📱 +62 812-3456-7890</li>
+        <li>📧 
+            <a 
+                href="mailto:ppmatholibasuluk02@gmail.com" 
+                class="hover:text-white transition-colors duration-200"
+            >
+                ppmatholibasuluk02@gmail.com
+            </a>
+        </li>
+        <li>📱 
+            <a 
+                href="https://wa.me/6281234567890" 
+                target="_blank" 
+                rel="noopener noreferrer"
+                class="hover:text-white transition-colors duration-200"
+            >
+                +62 812-3456-7890
+            </a>
+        </li>
         <li>📍 
             <a 
                 href="https://maps.app.goo.gl/2RSQHqGgzPmHPVEF7" 
@@ -371,12 +387,11 @@
                 rel="noopener noreferrer"
                 class="hover:text-white transition-colors duration-200"
             >
-                Kaliwadas Sumber Cirebon Jawa Barat Indonesia
+               Pondok Pesantren Matholib As-suluk Kaliwadas Sumber Cirebon Jawa Barat Indonesia
             </a>
         </li>
     </ul>
-                </div>
-                
+               </div> 
             </div>
             
             <div class="border-t border-gray-800 mt-10 pt-8 text-center text-sm text-gray-500">
