Enhance contact section with registration and links
Added new registration and contact options including WhatsApp and Email links.

--- a/index.html
+++ b/index.html
@@ -320,14 +320,52 @@
             <p class="text-xl mb-10 text-green-100">
                 Bergabung dengan metode As-Suluk. Dari nol hingga mampu membaca kitab turats.
             </p>
-            <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                <a href="#" class="bg-white text-green-800 px-8 py-4 rounded-lg font-bold text-lg hover:bg-green-100 transition shadow-xl">
-                    📋 Daftar Sekarang
-                </a>
-                <a href="#" class="border-2 border-white text-white px-8 py-4 rounded-lg font-bold text-lg hover:bg-white hover:text-green-800 transition">
-                    📞 Hubungi Kami
-                </a>
+           <div class="flex flex-col sm:flex-row gap-5 justify-center">
+    <!-- Daftar Sekarang -->
+    <a href="https://forms.gle/2RSQHqGgzPmHPVEF7" 
+       target="_blank"
+       class="group relative overflow-hidden bg-white rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 w-full sm:w-72">
+        <div class="absolute inset-0 bg-gradient-to-r from-green-400 to-green-600 opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
+        <div class="relative p-6 flex items-center gap-4 group-hover:text-white transition-colors duration-300">
+            <div class="w-12 h-12 bg-green-100 group-hover:bg-white rounded-full flex items-center justify-center text-2xl group-hover:text-green-600 transition-all">
+                📋
             </div>
+            <div>
+                <h3 class="font-bold text-gray-800 group-hover:text-white text-lg">Pendaftaran</h3>
+                <p class="text-sm text-gray-500 group-hover:text-green-100">Santri Baru 2026</p>
+            </div>
+        </div>
+    </a>
+
+    <!-- WhatsApp -->
+    <a href="https://wa.me/6281234567890?text=Assalamu'alaikum%2C%20saya%20ingin%20informasi%20pondok" 
+       target="_blank"
+       class="group relative overflow-hidden bg-green-500 rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 w-full sm:w-72">
+        <div class="relative p-6 flex items-center gap-4 text-white">
+            <div class="w-12 h-12 bg-white bg-opacity-20 rounded-full flex items-center justify-center text-2xl">
+                📱
+            </div>
+            <div>
+                <h3 class="font-bold text-white text-lg">WhatsApp</h3>
+                <p class="text-sm text-green-100">+62 812-3456-7890</p>
+            </div>
+        </div>
+    </a>
+
+    <!-- Email -->
+    <a href="mailto:ppmatholibasuluk02@gmail.com?subject=Informasi%20Pondok" 
+       class="group relative overflow-hidden bg-blue-500 rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 w-full sm:w-72">
+        <div class="relative p-6 flex items-center gap-4 text-white">
+            <div class="w-12 h-12 bg-white bg-opacity-20 rounded-full flex items-center justify-center text-2xl">
+                📧
+            </div>
+            <div>
+                <h3 class="font-bold text-white text-lg">Email</h3>
+                <p class="text-sm text-blue-100">ppmatholibasuluk02</p>
+            </div>
+        </div>
+    </a>
+           </div> 
         </div>
     </section>
     
