--- a/index.html
+++ b/index.html
@@ -322,8 +322,7 @@
             </p>
            <div class="flex flex-col sm:flex-row gap-5 justify-center">
     <!-- Daftar Sekarang -->
-    <a href="https://forms.gle/2RSQHqGgzPmHPVEF7" 
-       target="_blank"
+<a href="daftar.html" class="...">
        class="group relative overflow-hidden bg-white rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 w-full sm:w-72">
         <div class="absolute inset-0 bg-gradient-to-r from-green-400 to-green-600 opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
         <div class="relative p-6 flex items-center gap-4 group-hover:text-white transition-colors duration-300">
