--- a/index.html
+++ b/index.html
@@ -352,15 +352,9 @@
                     METODE AS-SULUK
                 </h4>
                 <p class="text-gray-400 text-sm leading-relaxed">
-                    Metode cepat memahami Nahwu & Sharaf. Pondok Pesantren Matholi'ul Basuluk hadir untuk membimbing Anda dari nol hingga mampu membaca kitab kuning.
+                    Metode cepat memahami Nahwu & Sharaf. Pondok Pesantren Matholib As-suluk hadir untuk membimbing Anda dari nol hingga mampu membaca kitab kuning.
                 </p>
-                <div class="mt-4 flex space-x-2">
-                    <span class="text-xs bg-green-800 text-green-200 px-2 py-1 rounded">#Nahwu</span>
-                    <span class="text-xs bg-green-800 text-green-200 px-2 py-1 rounded">#Sharaf</span>
-                    <span class="text-xs bg-green-800 text-green-200 px-2 py-1 rounded">#KitabKuning</span>
-                </div>
             </div>
-            
             <!-- Kolom 2: Kontak Utama (WA, Email, Maps) -->
             <div>
                 <h4 class="font-bold text-lg mb-4 text-green-400">Kontak</h4>
@@ -494,7 +488,7 @@
         <!-- Copyright & Credit -->
         <div class="border-t border-gray-800 mt-10 pt-8 text-center">
             <p class="text-sm text-gray-500">
-                © 2026 Metode As-Suluk - Pondok Pesantren MatholiB As-suluk
+                © 2026 Metode As-Suluk
             </p>
             <p class="text-xs text-gray-600 mt-2">
                 Kaliwadas, Sumber, Cirebon | Jawa Barat, Indonesia
