Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@
 
                 <ul class="space-y-2 text-sm">
 
-                    <li><a href="#" class="text-gray-300 hover:text-[#c6a15b] transition flex items-center gap-2"><i class="fa-regular fa-circle-right text-xs"></i> Tentang Kami</a></li>
+                    <li><a href="tentang.html" class="text-gray-300 hover:text-[#c6a15b] transition flex items-center gap-2"><i class="fa-regular fa-circle-right text-xs"></i> Tentang Kami</a></li>
 
                     <li><a href="#kurikulum" class="text-gray-300 hover:text-[#c6a15b] transition flex items-center gap-2"><i class="fa-regular fa-circle-right text-xs"></i> Kurikulum</a></li>
 
@@ -1119,3 +1119,4 @@
 </body>
 
 </html>
+
