--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@
 
                     <li class="flex items-start gap-3"><i class="fa-regular fa-circle-check text-[#1a4d2e] mt-1"></i> <span>Penambahan Materi dan Pemahaman Nahwu Shorof</span></li>
 
-                    <li class="flex items-start gap-3"><i class="fa-regular fa-circle-check text-[#1a4d2e] mt-1"></i> <span></span>Praktik Kitab Turats Tanpa Harokat</li>
+                    <li class="flex items-start gap-3"><i class="fa-regular fa-circle-check text-[#1a4d2e] mt-1"></i> <span>Praktik Kitab Turats Tanpa Harokat</span>span</li>
 
                 </ul>
 
@@ -1221,5 +1221,6 @@
     });
 </script>
 </body>
+
 
 </html>
